--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-title: Sleek # your site title
+title: Kanvas # your site title
 author: Lucas Van Hooreweghe # You :P
 description: > # Meta description of Homepage
   Write an awesome description for your new site here. You can edit this
@@ -10,7 +10,7 @@ url: "https://kanvasatelier/" # the base hostname & protocol for your site, e.g.
 
 # SEO PLUGIN
 social:
-  name: Your Name
+  name: Kanvas
   links:
     - https://twitter.com/BenBalter
     - https://www.facebook.com/ben.balter
@@ -23,6 +23,9 @@ social:
 navigation: # Navigation links
   - {name: 'Home', link: '/'}
   - {name: 'Wat', link: '/wat'}
+  - {name: 'Aanbod', link: '/aanbod'}
+  - {name: 'Waar', link: '/waar'}
+  - {name: 'Inschrijven', link: '/inschrijven'}
   - {name: 'Contact', link: '/contact'}
 
 tagline: >
@@ -30,10 +33,10 @@ tagline: >
 
 hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
-email: your-email@domain.com # email for form submission
+email: info@kanvasatelier.be # email for form submission
 
-twitter_username: jan_czizikow # replace with your_twitter_username or comment to remove link from footer
-github_username:  janczizikow # replace with your_github_username or comment to remove link from footer
+#twitter_username: jan_czizikow # replace with your_twitter_username or comment to remove link from footer
+#github_username:  janczizikow # replace with your_github_username or comment to remove link from footer
 instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
 
 disqus:
