--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,8 @@ email: info@kanvasatelier.be # email for form submission
 #github_username:  janczizikow # replace with your_github_username or comment to remove link from footer
 instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
 
-disqus:
-  shortname: janczizikow # to enable comments replace with your_disqus_shortname
+#disqus:
+#  shortname: janczizikow # to enable comments replace with your_disqus_shortname
 
 # google_tag_manager: GTM-XXXXXXX # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
 
