--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ instagram_username: shanlongjj # replace with your_instagram_username or comment
 #  shortname: janczizikow # to enable comments replace with your_disqus_shortname
 
 # google_tag_manager: GTM-XXXXXXX # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
-google_tag_manager: GTM-PVTP5B8
+google_tag_manager: UA-123908133-1
 
 service_worker: true
 
