--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,14 @@
 # SITE CONFIGURATION
-title: Kanvas # your site title
+title: Kanvas Atelier # your site title
 author: Lucas Van Hooreweghe # You :P
 description: > # Meta description of Homepage
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Ward is mega cool
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://kanvasatelier.be" # the base hostname & protocol for your site, e.g. http://example.com
 
 # SEO PLUGIN
 social:
-  name: Kanvas
+  name: Kanvas Atelier
   links:
     - https://twitter.com/BenBalter
     - https://www.facebook.com/ben.balter
@@ -29,7 +27,8 @@ navigation: # Navigation links
   - {name: 'Contact', link: '/contact'}
 
 tagline: >
-  Modern Jekyll theme focused on speed performance &amp; SEO best practices
+  Broeinest voor creativiteit in Deinze en omstreken
+  
 
 hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
