--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ email: info@kanvasatelier.be # email for form submission
 
 #twitter_username: jan_czizikow # replace with your_twitter_username or comment to remove link from footer
 #github_username:  janczizikow # replace with your_github_username or comment to remove link from footer
-instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
+instagram_username: kanvasatelier # replace with your_instagram_username or comment to remove link from footer
 
 #disqus:
 #  shortname: janczizikow # to enable comments replace with your_disqus_shortname
