--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,8 @@ url: "https://kanvasatelier.be" # the base hostname & protocol for your site, e.
 social:
   name: Kanvas Atelier
   links:
-    - https://twitter.com/BenBalter
     - https://www.facebook.com/ben.balter
     - https://www.linkedin.com/in/BenBalter
-    - https://plus.google.com/+BenBalter
-    - https://github.com/benbalter
-    - https://keybase.io/benbalter
 
 # THEME SETTINGS
 navigation: # Navigation links
@@ -30,7 +26,7 @@ tagline: >
   Broeinest voor creativiteit in Deinze en omstreken
   
 
-hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
+hero_img: posts/header-image.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
 email: info@kanvasatelier.be # email for form submission
 
